syntax = "proto3";

package management;

// This option is used to set the default error response for all Swagger APIs generated from this file.
// See also header.json.
// It has to be copy&pasted into each file.
option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
  responses: {
    key: "default"
    value: {
      description: "An error response."
      schema: {
        json_schema: {
          ref: "#/definitions/managementpbErrorResponse"
        }
      }
    }
  }
};
option go_package = "managementpb";

import "github.com/mwitkow/go-proto-validators/validator.proto";
import "google/api/annotations.proto";
import "inventorypb/agents.proto";
import "inventorypb/services.proto";
import "managementpb/service.proto";
import "protoc-gen-swagger/options/annotations.proto";

// Add MySQL

message AddMySQLRequest {
  // Node identifier on which a service is been running.
  // Exactly one of these parameters should be present: node_id, node_name, add_node.
  string node_id = 1;
  // Node name on which a service is been running.
  // Exactly one of these parameters should be present: node_id, node_name, add_node.
  string node_name = 21;
  // Create a new Node with those parameters.
  // Exactly one of these parameters should be present: node_id, node_name, add_node.
  AddNodeParams add_node = 22;
  // Unique across all Services user-defined name. Required.
  string service_name = 2 [
    (validator.field) = {
      string_not_empty: true
    }
  ];
  // Node and Service access address (DNS name or IP). Required.
  string address = 3 [
    (validator.field) = {
      string_not_empty: true
    }
  ];
  // Service Access port. Required.
  uint32 port = 4 [
    (validator.field) = {
      int_gt: 0
    }
  ];
  // The "pmm-agent" identifier which should run agents. Required.
  string pmm_agent_id = 5 [
    (validator.field) = {
      string_not_empty: true
    }
  ];
  // Environment name.
  string environment = 6;
  // Cluster name.
  string cluster = 7;
  // Replication set name.
  string replication_set = 8;
  // MySQL username for scraping metrics.
  string username = 9 [
    (validator.field) = {
      string_not_empty: true
    }
  ];
  // MySQL password for scraping metrics.
  string password = 10;
  // If true, adds qan-mysql-perfschema-agent for provided service.
  bool qan_mysql_perfschema = 14;
  // If true, adds qan-mysql-slowlog-agent for provided service.
  bool qan_mysql_slowlog = 15;
  // Custom user-assigned labels.
  map<string, string> custom_labels = 20;
  // Skip connection check.
  bool skip_connection_check = 30;
  // Disable query examples.
  bool disable_query_examples = 31;
  // If qan-mysql-slowlog-agent is added, slowlog file is rotated at this size if > 0.
  // If zero, default value 1GB is used. Use negative value to disable rotation.
  int64 max_slowlog_file_size = 32;
}

message AddMySQLResponse {
  inventory.MySQLService service = 1;
  inventory.MySQLdExporter mysqld_exporter = 2;
  inventory.QANMySQLPerfSchemaAgent qan_mysql_perfschema = 3;
  inventory.QANMySQLSlowlogAgent qan_mysql_slowlog = 4;
}

// MySQL service provides public Management API methods for MySQL Service.
service MySQL {
  // AddMySQL adds MySQL Service and starts several Agents.
  // It automatically adds a service to inventory, which is running on provided "node_id",
  // then adds "mysqld_exporter", and "qan_mysql_perfschema" agents
  // with provided "pmm_agent_id" and other parameters.
  rpc AddMySQL(AddMySQLRequest) returns (AddMySQLResponse) {
    option (google.api.http) = {
      post: "/v0/management/MySQL/Add"
      body: "*"
    };
  }
}
